<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.richard.pixlog.ui.screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.richard.pixlog.ui.screen.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <activity
        android:id="@+id/navigation_map"
        android:name="com.richard.pixlog.ui.screen.map.MapsActivity"
        android:label="@string/title_activity_maps"
        tools:layout="@layout/activity_maps" >
    </activity>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.richard.pixlog.ui.screen.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>