<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.login.LoginActivity"
    android:background="@color/purple_40"
    >
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextStyle.Tritery.light"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="16dp"

        />
    <TextView
        android:id="@+id/tv_welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        style="@style/TextStyle.Tritery.bold"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="64dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_rounded_view">
        
        <!-- Email Input with Error Message -->
        <LinearLayout
            android:id="@+id/groupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">
            
            <com.richard.pixlog.ui.component.EditTextComponent
                android:id="@+id/text_input_email"
                style="@style/TextStyle.primary.normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
                
        </LinearLayout>
        
        <!-- Password Input with Error Message -->
        <LinearLayout
            android:id="@+id/groupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/groupEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">
            
            <com.richard.pixlog.ui.component.EditTextComponent
                android:id="@+id/text_input_password"
                style="@style/TextStyle.primary.normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />
                
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/groupPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            style="@style/TextStyle.secondary.normal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            android:layout_marginEnd="50dp"
            />

        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/TextStyle.secondary.normal"
            app:layout_constraintStart_toEndOf="@id/tv_question1"
            app:layout_constraintTop_toTopOf="@id/tv_question1"
            app:layout_constraintBottom_toBottomOf="@id/tv_question1"
            android:layout_marginStart="8dp"
            android:textColor="@color/purple_40"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressLoading"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>