<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.detailStory.DetailStoryActivity">
    <ImageView
        android:id="@+id/ivContent"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:transitionName="imageDescription"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/ivContent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"
        android:transitionName="avatar"
        />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="@id/ivAvatar"
        android:layout_marginStart="8dp"
        android:transitionName="name"
        style="@style/TextStyle.secondary.bold"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/loremIpsum"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:transitionName="description"
        style="@style/TextStyle.primary.normal12"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:transitionName="location"
        style="@style/TextStyle.secondary.bold"/>
    <TextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatedDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvName"
        android:layout_marginEnd="16dp"
        android:transitionName="updateDate"
        style="@style/TextStyle.secondary.bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>