<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screen.dashboard.DashboardFragment"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.screen.dashboard.DashboardFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="Upload Photo"
            app:titleTextAppearance="@style/TextStyle.primary.normal"
            app:titleCentered="true"
            app:navigationIcon="?attr/homeAsUpIndicator" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidlineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ctCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/camera"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidlineVertical"
        app:layout_constraintBottom_toBottomOf="@id/guidlineHorizontal"
        style="@style/TextStyle.secondary.bold"
        android:textColor="@color/white" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ctGallery"
        app:layout_constraintStart_toStartOf="@id/guidlineVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidlineHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/gallery"
        style="@style/TextStyle.secondary.bold"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ctCamera"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:background="@color/cardview_dark_background"
        android:src="@drawable/ic_gallery" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctEditDescription"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/purple_700"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:hintTextColor="@color/purple_700">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="top|start"
        android:padding="8dp"
        android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@id/ctEditDescription"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        style="@style/TextStyle.secondary.bold"
        android:textColor="@color/white"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBox"
            app:layout_constraintStart_toStartOf="@id/ctCamera"
            app:layout_constraintTop_toBottomOf="@id/ctCamera"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/use_location" />
        <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post"
        style="@style/TextStyle.secondary.bold"
        android:textColor="@color/white"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>